<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/base_constraint_layout">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/cal_guideline"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6"/>

    <TextView
        android:id="@+id/cal_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cal_guideline"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/main_repmax"
        style="@style/title_textview"/>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/cal_title_divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="30dp"
        app:dividerColor="@color/secondaryColor"
        app:layout_constraintTop_toBottomOf="@id/cal_title"/>

    <soup.neumorphism.NeumorphImageButton
        android:id="@+id/cal_calbtn"
        style="@style/neumorph_imagebtn"
        android:src="@drawable/ic_calculate_white_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/cal_input_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@id/cal_calbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cal_calbtn"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cal_weight_text_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            app:startIconDrawable="@drawable/ic_fitness_center_white_24dp"
            android:hint="@string/cal_weight"
            style="@style/cal_textfield">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cal_weight_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:nextFocusDown="@id/cal_rep_text_field"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cal_rep_text_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            app:startIconDrawable="@drawable/ic_published_with_changes_white_24dp"
            android:hint="@string/cal_rep"
            style="@style/cal_textfield">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cal_rep_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/cal_estimation_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cal_estimation_dropdown"
        app:layout_constraintTop_toBottomOf="@id/cal_title_divider"
        app:layout_constraintBottom_toBottomOf="@id/cal_estimation_dropdown"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/nanummyeongjo_regular"
        android:gravity="end"
        android:textSize="@dimen/text_smallest"
        android:maxLines="1"
        android:text="@string/cal_estimation"
        android:textColor="@color/primaryTextColor"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cal_estimation_dropdown"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cal_title_divider"
        android:layout_marginTop="3dp"
        app:hintEnabled="false"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">
        <AutoCompleteTextView
            android:id="@+id/cal_estimation_dropdown_field"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:padding="2dp"
            android:textSize="11sp"
            android:inputType="none"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cal_estimation_text"
        app:layout_constraintBottom_toTopOf="@id/cal_input_container"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/cal_guideline2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.6"/>

            <TextView
                android:id="@+id/cal_repmax_text"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:textColor="@color/white"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/nanummyeongjo_extrabold"
                android:maxLines="1"
                android:gravity="center_horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/cal_guideline2"
                android:layout_marginEnd="10dp"
                android:text="@string/cal_rm_100_text"/>

            <TextView
                android:id="@+id/cal_repmax"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:fontFamily="@font/nanummyeongjo_extrabold"
                android:textColor="@color/white"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:layout_marginStart="5dp"
                android:gravity="end"
                app:layout_constraintStart_toEndOf="@id/cal_guideline2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/cal_strength_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/cal_small_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cal_repmax"
                android:layout_marginTop="15dp"
                android:text="@string/cal_strength"
                android:textColor="@color/primaryColorLight1"/>

            <TextView
                android:id="@+id/cal_95_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cal_strength_text"
                android:text="@string/cal_percent_95"
                style="@style/cal_small_text"
                android:layout_marginTop="10dp"
                android:textColor="@color/primaryColorLight1"
                />

            <TextView
                android:id="@+id/cal_95_rep"
                style="@style/cal_small_text"
                app:layout_constraintTop_toTopOf="@id/cal_95_title"
                app:layout_constraintEnd_toStartOf="@id/cal_guideline2"
                android:text="@string/cal_percent_95_rep"
                android:textColor="@color/primaryColorLight1"/>

            <TextView
                android:id="@+id/cal_95"
                style="@style/cal_small_text"
                android:text="@string/app_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/cal_95_title"
                android:textColor="@color/primaryColorLight1"/>

            <TextView
                android:id="@+id/cal_90_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cal_95_title"
                android:text="@string/cal_percent_90"
                style="@style/cal_small_text"
                android:layout_marginTop="5dp"
                android:textColor="@color/primaryColorLight1"
                />

            <TextView
                android:id="@+id/cal_90_rep"
                style="@style/cal_small_text"
                app:layout_constraintTop_toTopOf="@id/cal_90_title"
                app:layout_constraintEnd_toStartOf="@id/cal_guideline2"
                android:text="@string/cal_percent_90_rep"
                android:textColor="@color/primaryColorLight1"/>

            <TextView
                android:id="@+id/cal_90"
                style="@style/cal_small_text"
                android:text="@string/app_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/cal_90_title"
                android:textColor="@color/primaryColorLight1"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>